tests/output/self_hosted/bad_statement_error.txt
tests/bad_statement_error.oomph:2: error: should be a statement

    case
    ^^^^

assert() failed in "self_hosted/error.oomph", line N
